# SZPU_IISE_GA-Inspection-Robot

./: Camera.sh  Lidar.sh  readme.md  startup.sh
camera/: ValueGet.py  main.py  mqtt_server.py  serial_test.py  test.py  yolo_test.py
camera/Camera/: CameraParams_header.py  HKCamera.py  MvCameraControl_class.py  test.py
hsh_ros2_main/: .pgm  .yaml  debug.sh  nav1.sh  run.sh  save_2dmap.sh  使用说明.md
hsh_ros2_main/map/all/: map.pgm  map.yaml
hsh_ros2_main/map/half/: map.pgm  map.yaml
hsh_ros2_main/src/bringup/: CMakeLists.txt  package.xml
hsh_ros2_main/src/bringup/launch/: real_bringup.launch.py  robot_distcription.launch.py
hsh_ros2_main/src/bringup/map/: test.pgm  test.yaml  test1.pgm  test1.yaml
hsh_ros2_main/src/bringup/rviz/: fastlio.rviz
hsh_ros2_main/src/bringup/urdf/: sentry_robot_real.xacro
hsh_ros2_main/src/communication/expression_msgs/: CMakeLists.txt  package.xml
hsh_ros2_main/src/communication/expression_show/: index.html  package.xml  setup.cfg  setup.py
hsh_ros2_main/src/communication/model_communication/: package.xml  setup.cfg  setup.py
hsh_ros2_main/src/rc_driver/pcl_reg/: package.xml  setup.cfg  setup.py
hsh_ros2_main/src/rc_driver/serial_node/: setup.py
hsh_ros2_main/src/rc_mapper/pointcloud_to_laserscan/: CMakeLists.txt
hsh_ros2_main/src/rc_perception/pointcloud_filter/: CMakeLists.txt  package.xml
hsh_ros2_main/src/rc_perception/pointcloud_filter/config/: pointcloud_config.yaml
hsh_ros2_main/src/rc_perception/pointcloud_filter/launch/: pointcloud_filter.launch.py
hsh_ros2_main/src/rc_perception/pointcloud_filter/src/: pointcloud_filter_node.cpp
node-red-flows/: flows (1).json  flows.json
(+75 files in other folders)
