<?xml version="1.0"?>
<package format="3">
  <name>pointcloud_filter</name>
  <version>0.0.0</version>
  <description>The pointcloud_filter package</description>

  <maintainer email="user@todo.todo">user</maintainer>
  <license>TODO</license>

  <build_depend>rclcpp</build_depend>
  <build_depend>sensor_msgs</build_depend>

  <exec_depend>rclcpp</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>